@@ -1,3 +1,4 @@
+  -reformat work to get ready for rerolls
   -added 'All dice have cancelled out' message
   -added emoji to chat
 
